# university24-cur

./: LICENSE
t2.aisd/labs/: CMakeLists.txt  CMakePresets.json  lr1.cpp  lr2.cpp  lr3.cpp  lr4.cpp  lr5.cpp  lr5_v2.cpp  lr6.cpp  lr8.cpp  utils.hpp
t3.КПО/labs/: CMakeLists.txt  lr10_10.cpp  lr10_11.cpp  lr7_10.cpp  lr7_20.cpp  lr7_30.cpp  lr7_40.cpp  lr8_20.cpp  lr8_29.cpp  lr8_36.cpp  lr8_4.cpp  lr9.cpp  utils.hpp
